syntax = "proto3";

package com.example.grpc.user;

message StringMessage {
  string string = 1;
}

message UserDetailsMessage {
  string email = 1;
  string password = 2;
  repeated string roles = 3;
  bool status = 4;
}

message EmptyMessage {

}

message BooleanMessage {
  bool boolean = 1;
}

service UserService{
  rpc getUserDetails(StringMessage) returns (UserDetailsMessage);
  rpc saveUserDetails(UserDetailsMessage) returns (EmptyMessage);
  rpc existsUserByEmail(StringMessage) returns (BooleanMessage);
}